# DataStructures-SearchEngine

./: AVL.h  AVLTree.h  CMakeLists.txt  DocParse.cpp  DocParse.h  IndexWord.cpp  IndexWord.h  Node.h  Query.cpp  Query.h  RBTree.h  README.md  RedBlack.h  STree.h  Splay.h  Test.cpp  Test.h  Tree.h  User.cpp  User.h  json.hpp  main.cpp
